Return empty lists instead of null in GetCallingRelaysV2